# rust.polar

./: Cargo.toml  README.md  Stocks.csv  manager.ipynb
.ipynb_checkpoints/: manager-checkpoint.ipynb
example/: df_fromcsv.rs
src/: main.rs
